# mathematical_software

./: .calculator.cpp.swp  .gitignore  CMakeLists.txt  README.md  calc  calculator.cpp
calculator/: README.md
include/cas/math/: mathlib.h
mathlib/: .main.cpp.swp  .mathlib.cpp.swp  README.md  main.cpp  mathcli  mathlib.cpp  mathlib.h
src/: main.cpp  mathlib.cpp
tests/: test_mathlib.cpp
